--- a/index.html
+++ b/index.html
@@ -78,23 +78,23 @@
 
                             <div class="col">
                                 <div class="form-group">
-                                    <select class="form-control" id="dateOfBirth">
-                                        <option value="1">1</option>
-                                        <option value="1">1</option>
-                                        <option value="1">1</option>
+                                    <select class="form-control" id="dateOfBirth" name="dateOfBirth"></select>
+                                    <select class="form-control" id="monthOfBirth" name="monthOfBirth">
+                                        <option value="1" selected>1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                        <option value="6">6</option>
+                                        <option value="7">7</option>
+                                        <option value="8">8</option>
+                                        <option value="9">9</option>
+                                        <option value="10">10</option>
+                                        <option value="11">11</option>
+                                        <option value="12">12</option>
                                     </select>
-                                    <select class="form-control" id="monthOfBirth">
-                                        <option value="1">1</option>
-                                        <option value="1">1</option>
-                                        <option value="1">1</option>
-                                    </select>
-                                    <select class="form-control" id="yearOfBirth">
-                                        <option value="1">1</option>
-                                        <option value="1">1</option>
-                                        <option value="1">1</option>
-                                    </select>
+                                    <select class="form-control" id="yearOfBirth" name="yearOfBirth"></select>
                                 </div>
-
                             </div>
                         </div>
                     </div>
@@ -204,6 +204,7 @@
 
     <!-- my js file -->
     <script src="js/index.js"></script>
+    <script src="js/dateFormat.js"></script>
 </body>
 
 </html>
