pass courses between 2 select box by buttons

--- a/index.html
+++ b/index.html
@@ -108,15 +108,7 @@
                                     <p class="title-course text-left">Các môn học:</p>
                                     <div class="form-group">
                                         <select class="form-control" name="available-courses" id="available-courses"
-                                            multiple>
-                                            <option value="">ksdhfkjsd</option>
-                                            <option value="">ksdhfkjsd</option>
-                                            <option value="">ksdhfkjsd</option>
-                                            <option value="">ksdhfkjsd</option>
-                                            <option value="">ksdhfkjsd</option>
-                                            <option value="">ksdhfkjsd</option>
-                                            <option value="">ksdhfkjsd</option>
-                                        </select>
+                                            multiple></select>
                                     </div>
 
                                 </div>
@@ -145,15 +137,7 @@
                                     <p class="title-course">Đã chọn:</p>
                                     <div class="form-group">
                                         <select class="form-control" name="selected-courses" id="selected-courses"
-                                            multiple>
-                                            <option value="">ksdhfkjsd</option>
-                                            <option value="">ksdhfkjsd</option>
-                                            <option value="">ksdhfkjsd</option>
-                                            <option value="">ksdhfkjsd</option>
-                                            <option value="">ksdhfkjsd</option>
-                                            <option value="">ksdhfkjsd</option>
-                                            <option value="">ksdhfkjsd</option>
-                                        </select>
+                                            multiple></select>
                                     </div>
                                 </div>
                             </div>
