them row, hien thi su kien khi click row, show message nhap sai form

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                                 <div class="form-group">
                                     <input type="text" class="form-control" id="txtName" placeholder="Họ tên">
                                 </div>
+                                <small></small>
                             </div>
                         </div>
 
@@ -157,7 +158,7 @@
 
         <div class="register-table row mt-3">
             <div class="col">
-                <table class="registration-table table table-bordered table-hover">
+                <table class="table table-bordered table-hover" id="registration-table">
                     <thead class="thead-inverse">
                         <tr>
                             <th>Mã số</th>
@@ -189,6 +190,8 @@
     <!-- my js file -->
     <script src="js/index.js"></script>
     <script src="js/dateFormat.js"></script>
+
+    
 </body>
 
 </html>
